--- a/assets/stylesheets/common.scss
+++ b/assets/stylesheets/common.scss
@@ -3,6 +3,7 @@ $menu: 20vw;
 $spSidebarWidth: 80%;
 $pcSidebarWidth: 200px;
 $blog_theme: #ff8297;
+$sidebar_duration: 300ms;
 
 @mixin media($break-point) {
   @media screen and (min-width: $break-point) {
