--- a/assets/stylesheets/blog.scss
+++ b/assets/stylesheets/blog.scss
@@ -4,10 +4,15 @@
 .ly_blog {
   width: 100%;
   .ly_header {
+    display: -webkit-box;
     display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+      -webkit-box-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+              align-items: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+              flex-direction: column;
     height: 100vh;
     padding: 0 20px;
     border-bottom: 1px dotted $blog_theme;
@@ -55,8 +60,11 @@
       color: $blog_theme;
     }
     img {
-      width: 90%;
+      width: 100%;
       margin: 0 auto;
+      @include media($pc) {
+        width: 90%;
+      }
     }
     pre {
       margin: 0 0 14px;
