index.vueの文言変更

--- a/assets/stylesheets/common.scss
+++ b/assets/stylesheets/common.scss
@@ -2,7 +2,7 @@ $pc: 680px;
 $menu: 20vw;
 $spSidebarWidth: 80%;
 $pcSidebarWidth: 200px;
-$blog_theme: #ff8297;
+$themeColor: #ff8297;
 $sidebar_duration: 300ms;
 
 @mixin media($break-point) {
