--- a/assets/stylesheets/blog.scss
+++ b/assets/stylesheets/blog.scss
@@ -15,12 +15,12 @@
               flex-direction: column;
     height: 100vh;
     padding: 0 20px;
-    border-bottom: 1px dotted $blog_theme;
+    border-bottom: 1px dotted $themeColor;
     .el_blogDate {
       margin: 0 0 14px;
       font-family: 'Anton', sans-serif;
       font-size: 22px;
-      color: $blog_theme;
+      color: $themeColor;
     }
     .el_blogHeader {
       font-size: 28px;
@@ -50,14 +50,14 @@
       }
       .code {
         padding: 0 4px;
-        color: $blog_theme;
-        border: 1px solid $blog_theme;
+        color: $themeColor;
+        border: 1px solid $themeColor;
       }
     }
     a {
       font-size: 17px;
       text-decoration: underline;
-      color: $blog_theme;
+      color: $themeColor;
     }
     img {
       width: 100%;
